Added ArithmeticService and it's test.

--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,9 @@ allprojects {
     repositories {
         mavenCentral()
     }
+
+    dependencies {
+        testCompile 'junit:junit:4.12'
+        testCompile 'org.springframework:spring-test:4.2.4.RELEASE'
+    }
 }
