--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ allprojects {
     dependencies {
         testCompile 'junit:junit:4.12'
         testCompile 'org.springframework:spring-test:4.2.4.RELEASE'
+        testCompile 'org.hamcrest:hamcrest-all:1.3'
     }
 
     configurations {
