--- a/web/build.gradle
+++ b/web/build.gradle
@@ -8,4 +8,5 @@ dependencies {
 
     compile 'org.springframework:spring-webmvc:4.2.4.RELEASE'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'javax.servlet:jstl:1.2'
 }
