--- a/web/build.gradle
+++ b/web/build.gradle
@@ -3,6 +3,11 @@ version '0.0.1'
 
 apply plugin: 'war'
 
+war {
+    archiveName 'simplespringexample.war'
+    buildDir '../build'
+}
+
 dependencies {
     compile project(':core')
 
