--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'info.ernestas.simple'
 version '0.0.1'
 
-allprojects {
+subprojects {
     apply plugin: 'java'
 
     sourceCompatibility = '1.8'
