--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'info.ernestas.simple'
 version '0.0.1'
 
 subprojects {
+    apply plugin: 'idea'
     apply plugin: 'java'
 
     sourceCompatibility = '1.8'
@@ -27,10 +28,20 @@ subprojects {
 
     sourceSets {
         integrationTests {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-            java.srcDir file('src/integration-test/java')
+            java {
+                compileClasspath += main.output + test.output
+                runtimeClasspath += main.output + test.output
+                srcDir file('src/integration-test/java')
+            }
             resources.srcDir file('src/integration-test/resources')
+        }
+    }
+
+    idea {
+        module {
+            // Show integration test source directory in IntelliJ IDEA
+            testSourceDirs += file('src/integration-test/java')
+            scopes.TEST.plus += [ configurations.integrationTestsCompile ]
         }
     }
 
