--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ subprojects {
         testCompile 'junit:junit:4.12'
         testCompile 'org.springframework:spring-test:4.2.4.RELEASE'
         testCompile 'org.hamcrest:hamcrest-all:1.3'
+        testCompile 'com.h2database:h2:1.4.191'
     }
 
     configurations {
@@ -52,6 +53,19 @@ subprojects {
         testLogging {
             events 'started', 'passed', 'failed', 'skipped'
         }
+    }
+
+    task testJar(type: Jar, dependsOn: testClasses) {
+        baseName = "test-${project.archivesBaseName}"
+        from sourceSets.test.output
+    }
+
+    configurations {
+        tests
+    }
+
+    artifacts {
+        tests testJar
     }
 
     task integrationTests(type: Test) {
