--- a/web/build.gradle
+++ b/web/build.gradle
@@ -16,4 +16,6 @@ dependencies {
     compile 'org.springframework:spring-webmvc:4.2.4.RELEASE'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'javax.servlet:jstl:1.2'
+
+    testCompile project(path: ':core', configuration: 'tests')
 }
