--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '0.1.0'
 subprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
+    apply plugin: 'eclipse'
 
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
